--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sourav-blog",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^2.21.7",
     "next": "12.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.33",
     "eslint": "7",
-    "eslint-config-next": "12.0.1",
-    "typescript": "^4.4.4"
+    "eslint-config-next": "12.0.1"
   }
 }
